1.9.1
- fixed crash when reordering mods on some operating systems
- fixed all dmflags2 being mistakenly put into dmflags3
- fixed broken layout with Qt versions older than 6.8
- fixed compatibility with the KEX-based Doom re-release (the file paths will be absolute)
- fixed tooltips for the Custom data sub-directories and some gameplay flags
- only use -pistolstart and +sv_cheats in the command if the engine supports it (to prevent errors when starting)
- allowed entering absolute paths into the "Custom data sub-directories" fields
- Demo directory is now a separate directory from Save directory with its own override
- added possibility to hide the map list help label via a right click
- added "Open file" action to the right-click menu
- added "Move to top/bottom" actions to the right-click menu
- added the possibility to copy&paste mods from one preset to another
- introduced "Doom Mod Bundles" - sub-lists of mods that can be shared between presets
- minor bug-fixes and optimizations

1.9.0
- new application icon
- reworked the way the launcher detects where the engines store their data (configs, saves, ...)
- fixed the output path format for Windows (slashes)
- added an ability to prepend the command with a prefix
- added an option to load maps after mods
- added new launch option Resume demo (for DSDA-Doom)
- added dmflags3 options for latest GZDoom
- added pistolstart option for those engines that support it
- added support for Woof multiplayer parameters
- added an ability to choose player name and suit color for multiplayer (ZDoom family)
- fixed the port spin-box up/down buttons
- fixed loading saved games for PrBoom, DSDA-Doom and Woof
- removed the no longer used mod dir from Initial Setup dialog
- reorganized the second tab so that the launcher fits into a small resolution screen
- minor bug-fixes and optimizations

1.8.3
- added support for .hhe dehacked files
- added keyboard shortcuts for switching focus between the main lists + better button tooltips